--- a/config/database.yml
+++ b/config/database.yml
@@ -21,6 +21,8 @@ default: &default
 
 development:
   <<: *default
+  development:
+  url: <%= ENV['DATABASE_URL'] %>
 
 
   # The specified database role being used to connect to PostgreSQL.
