--- a/config/database.yml
+++ b/config/database.yml
@@ -23,15 +23,14 @@ default: &default
 #   <<: *default
 #   development:
 #   url: <%= ENV['DATABASE_URL'] %>
-
-# development:
-#   adapter: postgresql
-#   encoding: unicode
-#   database: rails_blog
-#   pool: 5
-#   username: postgres
-#   password: 'postgres'
-#   host: localhost
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: rails_blog
+  pool: 5
+  username: postgres
+  password: 'postgres'
+  host: localhost
 
 development:
    adapter: postgresql
@@ -72,9 +71,6 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: blog_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
