--- a/config/database.yml
+++ b/config/database.yml
@@ -29,17 +29,17 @@ test:
   database: rails_blog
   pool: 5
   username: postgres
-  password: 'postgres'
+  password: "postgres"
   host: localhost
 
 development:
-   adapter: postgresql
-   encoding: unicode
-   database: blog_edzo
-   pool: 5
-   username: blog_edzo_user
-   password: Mj4vYKt0m9ye8B66r5gKuyoZImWH9UDz
-   host: dpg-cmp7f4mg1b2c73f9leb0-a.oregon-postgres.render.com
+  adapter: postgresql
+  encoding: unicode
+  database: rails_blog_yeyb
+  pool: 5
+  username: rails_blog_yeyb_user
+  password: y57wWjkDAkJzGWjzMyFuNmpDfC34kNSf
+  host: dpg-cp5fe621hbls73feh9dg-a.oregon-postgres.render.com
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
